add home fragment

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,7 +13,7 @@
 
     <color name="colorTransparent">#00FFFFFF</color>
     <color name="colorWhiteTransparent">#80FFFFFF</color>
-    <color name="colorDarkTransparent">#33000000</color>
+    <color name="colorDarkTransparent">#AA000000</color>
 
     <color name="colorBackgroundMission">#EBF9FA</color>
 
@@ -297,4 +297,7 @@
     <color name="grey_700">#616161</color>
     <color name="grey_800">#424242</color>
     <color name="grey_900">#212121</color>
+
+    <color name="ruby_red">#D02133</color>
+
 </resources>
