--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
@@ -299,5 +299,7 @@
     <color name="grey_900">#212121</color>
 
     <color name="ruby_red">#D02133</color>
+
+    <color name="mtrl_textinput_default_box_stroke_color" tools:override="true">@color/ruby_red</color>
 
 </resources>
