--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -3,5 +3,15 @@
     <item
         android:id="@id/homeFragment"
         android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/home"/>
+        android:title="Home"/>
+
+    <item
+        android:id="@id/homeFragment"
+        android:icon="@drawable/ic_home_black_24dp"
+        android:title="Home"/>
+
+    <item
+        android:id="@id/homeFragment"
+        android:icon="@drawable/ic_home_black_24dp"
+        android:title="Home"/>
 </menu>
