--- a/app/src/main/res/navigation/navigation_login.xml
+++ b/app/src/main/res/navigation/navigation_login.xml
@@ -3,16 +3,24 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation_login"
-    app:startDestination="@id/registerFragment">
+    app:startDestination="@+id/loginFragment">
 
     <fragment
         android:id="@+id/registerFragment"
         android:name="com.example.mooka_customer.screens.RegisterFragment"
         android:label="fragment_register"
-        tools:layout="@layout/fragment_register" />
+        tools:layout="@layout/fragment_register">
+        <action
+            android:id="@+id/action_registerFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
+    </fragment>
     <fragment
         android:id="@+id/loginFragment"
         android:name="com.example.mooka_customer.screens.LoginFragment"
         android:label="fragment_login"
-        tools:layout="@layout/fragment_login" />
+        tools:layout="@layout/fragment_login">
+        <action
+            android:id="@+id/action_loginFragment_to_registerFragment2"
+            app:destination="@id/registerFragment" />
+    </fragment>
 </navigation>
