--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,10 @@
         android:layout_width="match_parent"
         app:menu="@menu/menu"
         android:layout_height="wrap_content"
+        android:background="@color/ruby_red"
+        app:itemTextColor="@drawable/bottom_navigation_colors"
+        app:itemIconTint="@drawable/bottom_navigation_colors"
+        android:backgroundTint="@color/ruby_red"
         app:layout_constraintBottom_toBottomOf="parent" />
 
 
