--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -6,12 +6,12 @@
         android:title="Home"/>
 
     <item
-        android:id="@id/homeFragment"
+        android:id="@id/notificationFragment"
         android:icon="@drawable/ic_home_black_24dp"
-        android:title="Home"/>
+        android:title="Notification"/>
 
     <item
-        android:id="@id/homeFragment"
+        android:id="@id/profileFragment"
         android:icon="@drawable/ic_home_black_24dp"
-        android:title="Home"/>
+        android:title="Profile"/>
 </menu>
