--- a/app/src/main/res/drawable/gradient_linechart_circle.xml
+++ b/app/src/main/res/drawable/gradient_linechart_circle.xml
@@ -5,5 +5,6 @@
     <gradient
             android:angle="90"
             android:startColor="@color/colorDarkTransparent" />
+    <corners android:radius="12dp" />
 
 </shape>
