--- a/app/src/main/res/layout/item_product_populer.xml
+++ b/app/src/main/res/layout/item_product_populer.xml
@@ -7,18 +7,19 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <ImageView
+    <com.makeramen.roundedimageview.RoundedImageView
         android:id="@+id/imageView2"
-        android:layout_width="112dp"
-        android:layout_height="124dp"
+        android:layout_width="122dp"
+        android:layout_height="154dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:scaleType="centerCrop"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/example_bg_roti" />
+        android:src="@drawable/example_bg_roti"
+        app:riv_corner_radius="12dp"/>
 
     <ImageView
         android:id="@+id/imageView4"
@@ -28,7 +29,7 @@
         app:layout_constraintEnd_toEndOf="@+id/imageView2"
         app:layout_constraintStart_toStartOf="@+id/imageView2"
         app:layout_constraintTop_toTopOf="@+id/imageView2"
-        app:srcCompat="@drawable/gradient_linechart" />
+        app:srcCompat="@drawable/gradient_linechart_circle" />
 
     <TextView
         android:id="@+id/textView2"
@@ -39,7 +40,7 @@
         android:text="Baju Bayi 1 Thn"
         android:textColor="@color/colorWhite"
         app:layout_constraintBottom_toTopOf="@id/textView5"
-        android:textSize="@dimen/font_extra_small"
+        android:textSize="@dimen/font_subtitle"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/imageView4"
          />
@@ -51,7 +52,7 @@
         android:text="Rp, 59.000"
         android:layout_marginBottom="4dp"
         android:textColor="@color/colorWhite"
-        android:textSize="@dimen/font_extra_small"
+        android:textSize="@dimen/font_subtitle"
         app:layout_constraintBottom_toTopOf="@+id/textView6"
         app:layout_constraintStart_toStartOf="@+id/textView2" />
 
@@ -61,7 +62,7 @@
         android:layout_height="wrap_content"
         android:text="Surabaya"
         android:textColor="@color/colorWhite"
-        android:textSize="9sp"
+        android:textSize="@dimen/font_subtitle"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_margin="4dp"
         app:layout_constraintBottom_toBottomOf="parent" />
