--- a/app/src/main/res/layout/item_product_rekomendasi.xml
+++ b/app/src/main/res/layout/item_product_rekomendasi.xml
@@ -7,18 +7,21 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <ImageView
+    <com.makeramen.roundedimageview.RoundedImageView
         android:id="@+id/imageView2"
-        android:layout_width="134dp"
-        android:layout_height="80dp"
+        android:layout_width="164dp"
+        android:layout_height="100dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:scaleType="centerCrop"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/example_bg_roti" />
+        android:src="@drawable/example_bg_roti"
+        app:riv_corner_radius="12dp"/>
 
     <ImageView
         android:id="@+id/imageView4"
@@ -28,7 +31,9 @@
         app:layout_constraintEnd_toEndOf="@+id/imageView2"
         app:layout_constraintStart_toStartOf="@+id/imageView2"
         app:layout_constraintTop_toTopOf="@+id/imageView2"
-        app:srcCompat="@drawable/gradient_linechart" />
+        android:scaleType="centerCrop"
+        android:src="@drawable/gradient_linechart_circle"
+        />
 
     <TextView
         android:id="@+id/textView2"
@@ -36,21 +41,24 @@
         android:layout_marginTop="42dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        app:layout_constraintBottom_toTopOf="@id/textView5"
         android:text="Sephia's Bakery"
         android:textColor="@color/colorWhite"
-        android:textSize="@dimen/font_subtitle"
+        android:textSize="@dimen/font_title"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/imageView4"
-        app:layout_constraintTop_toTopOf="@+id/imageView4" />
+         />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Toko Roti"
+        app:layout_constraintBottom_toBottomOf="@id/imageView4"
         android:textColor="@color/colorWhite"
-        android:textSize="@dimen/font_extra_small"
+        android:textSize="@dimen/font_subtitle"
         app:layout_constraintStart_toStartOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        android:layout_marginBottom="8dp"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
