--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -38,4 +38,9 @@
         android:name="com.example.mooka_customer.screens.CheckoutFragment"
         android:label="fragment_checkout"
         tools:layout="@layout/fragment_checkout" />
+    <fragment
+        android:id="@+id/detailUmkmFragment"
+        android:name="com.example.mooka_customer.DetailUmkmFragment"
+        android:label="fragment_detail_umkm"
+        tools:layout="@layout/fragment_detail_umkm" />
 </navigation>
