--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     <fragment
         android:id="@+id/fragment"
         android:name="androidx.navigation.fragment.NavHostFragment"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         app:defaultNavHost="true"
         app:layout_constraintBottom_toTopOf="@id/navigation"
@@ -27,7 +27,7 @@
         app:itemTextColor="@drawable/bottom_navigation_colors"
         app:itemIconTint="@drawable/bottom_navigation_colors"
         android:backgroundTint="@color/ruby_red"
-        app:layout_constraintBottom_toBottomOf="parent" />
-
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/fragment"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
