--- a/app/src/main/res/layout/fragment_detail_umkm.xml
+++ b/app/src/main/res/layout/fragment_detail_umkm.xml
@@ -5,14 +5,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DetailUmkmFragment">
+    tools:context=".screens.DetailUmkmFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <ImageView
-            android:id="@+id/imageView16"
+            android:id="@+id/iv_product_banner"
             android:layout_width="0dp"
             android:layout_height="290dp"
             android:src="@drawable/baju_bayi"
@@ -21,7 +21,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textView21"
+            android:id="@+id/tv_title_product"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -30,10 +30,10 @@
             android:textColor="@android:color/black"
             android:textSize="@dimen/font_title"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView16" />
+            app:layout_constraintTop_toBottomOf="@+id/iv_product_banner" />
 
         <TextView
-            android:id="@+id/textView22"
+            android:id="@+id/tv_price_product"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -41,7 +41,7 @@
             android:text="Rp 59.000"
             android:textColor="@color/ruby_red"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView21" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_title_product" />
 
         <ImageView
             android:id="@+id/imageView22"
@@ -51,10 +51,10 @@
             android:layout_marginTop="32dp"
             android:src="@drawable/ic_store_grey"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView22" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_price_product" />
 
         <TextView
-            android:id="@+id/textView24"
+            android:id="@+id/tv_store_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -63,18 +63,17 @@
             android:textColor="@android:color/black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imageView22"
-            app:layout_constraintTop_toBottomOf="@+id/textView22" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_price_product" />
 
         <TextView
             android:id="@+id/textView28"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="4dp"
             android:text="Jl. Bridgen Katamso NO. 48"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imageView22"
-            app:layout_constraintTop_toBottomOf="@+id/textView24" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_store_title" />
 
         <TextView
             android:id="@+id/textView30"
