--- a/app/src/main/res/layout/item_product_populer.xml
+++ b/app/src/main/res/layout/item_product_populer.xml
@@ -25,10 +25,10 @@
         android:id="@+id/imageView4"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
-        app:layout_constraintEnd_toEndOf="@+id/imageView2"
-        app:layout_constraintStart_toStartOf="@+id/imageView2"
-        app:layout_constraintTop_toTopOf="@+id/imageView2"
+        app:layout_constraintBottom_toBottomOf="@+id/iv_product_banner"
+        app:layout_constraintEnd_toEndOf="@+id/iv_product_banner"
+        app:layout_constraintStart_toStartOf="@+id/iv_product_banner"
+        app:layout_constraintTop_toTopOf="@+id/iv_product_banner"
         app:srcCompat="@drawable/gradient_linechart_circle" />
 
     <TextView
