--- a/app/src/main/res/layout/item_pilihan_toko_lainnya.xml
+++ b/app/src/main/res/layout/item_pilihan_toko_lainnya.xml
@@ -7,7 +7,7 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/iv_background"
         android:layout_width="109dp"
         android:layout_height="109dp"
         app:layout_constraintRight_toRightOf="parent"
@@ -23,38 +23,37 @@
         android:id="@+id/imageView4"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
-        app:layout_constraintEnd_toEndOf="@+id/imageView2"
-        app:layout_constraintStart_toStartOf="@+id/imageView2"
-        app:layout_constraintTop_toTopOf="@+id/imageView2"
+        app:layout_constraintBottom_toBottomOf="@+id/iv_background"
+        app:layout_constraintEnd_toEndOf="@+id/iv_background"
+        app:layout_constraintStart_toStartOf="@+id/iv_background"
+        app:layout_constraintTop_toTopOf="@+id/iv_background"
         app:srcCompat="@drawable/gradient_linechart" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
         android:text="Sweater Baju bayi"
         android:textColor="@color/colorWhite"
-        android:textSize="@dimen/font_extra_small"
+        android:textSize="@dimen/font_subtitle"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@id/imageView2"
-        app:layout_constraintEnd_toEndOf="@id/imageView2"
+        app:layout_constraintBottom_toBottomOf="@id/iv_background"
+        app:layout_constraintEnd_toEndOf="@id/iv_background"
         android:layout_marginBottom="8dp"
         app:layout_constraintStart_toStartOf="@+id/imageView4" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/tv_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Rp, 59.000"
         android:layout_marginBottom="4dp"
         android:textColor="@color/colorBlack"
-        app:layout_constraintTop_toBottomOf="@id/imageView2"
-        app:layout_constraintEnd_toEndOf="@id/textView2"
+        app:layout_constraintTop_toBottomOf="@id/iv_background"
+        app:layout_constraintEnd_toEndOf="@id/tv_title"
         app:layout_goneMarginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:textSize="@dimen/font_extra_small"
-        app:layout_constraintStart_toStartOf="@+id/textView2" />
+        app:layout_constraintStart_toStartOf="@+id/tv_title" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
